Add syntax test notebook with variable and function tool examples

--- a/test_syntax.ipynb
+++ b/test_syntax.ipynb
@@ -1,18 +1,39 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "cell-1",
+   "cell_type": "markdown",
+   "id": "header-1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import random"
+    "# ai-jup Syntax Tests\n",
+    "\n",
+    "This notebook tests the special syntax features of ai-jup."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "id": "cell-1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from test_helpers import xq7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "header-2",
+   "metadata": {},
+   "source": [
+    "## Test 1: Variable Reference with `$`variable``\n",
+    "\n",
+    "Tests that the AI can introspect kernel variables using the `$`variable`` syntax."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "cell-2",
    "metadata": {},
    "outputs": [],
@@ -34,36 +55,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c70f3865-021a-4292-9555-10212b8a345a",
+   "id": "verify-1-header",
    "metadata": {},
    "source": [
-    "The value of 17 is simply 17. \n",
+    "### Verify Test 1\n",
     "\n",
-    "In your code, the variable `a` has been assigned the value 17 (which was randomly generated between 0 and 100). So `a = 17`.\n",
-    "\n",
-    "If you're asking about properties or characteristics of the number 17:\n",
-    "- It's a prime number\n",
-    "- It's an odd number\n",
-    "- It's between 16 and 18\n",
-    "- In binary, it's 10001\n",
-    "- In hexadecimal, it's 11\n",
-    "\n",
-    "Is there something specific about the number 17 you'd like to know?"
+    "Check that the AI correctly reported the value of `a`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "13446f44-c123-4dc6-869b-cf0c4860dbeb",
+   "execution_count": 9,
+   "id": "verify-1-code",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17"
+       "10"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,20 +85,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a3c4d69-17c6-450c-b5ee-03aa8d0aaf47",
+   "cell_type": "markdown",
+   "id": "header-3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Test 2: Function Tool with `&`function``\n",
+    "\n",
+    "Tests that the AI can discover and use functions as tools via the `&`function`` syntax. The function `xq7` has a non-intuitive name, but the AI should read its docstring to understand what it does."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cell-4",
+   "metadata": {
+    "ai_jup": {
+     "isPromptCell": true
+    }
+   },
+   "source": [
+    "Use &`xq7` to compute the result of 10 and 15, then explain what you did."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "verify-2-header",
+   "metadata": {},
+   "source": [
+    "### Verify Test 2\n",
+    "\n",
+    "Check the function signature and docstring, then verify the expected result:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "17f718fa-7e85-4fb2-a854-0945d251e533",
+   "execution_count": 10,
+   "id": "verify-2-docstring",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xq7(10, 15)"
+   ]
   }
  ],
  "metadata": {
